--- a/Studienarbeit/dokumentation.tex
+++ b/Studienarbeit/dokumentation.tex
@@ -62,7 +62,7 @@
 	
 	% Inhalt
 	\input{content/Einleitung}
-	\input{content/Unit_Tests_mit_Unity}
+	\input{content/Tests_mit_Unity}
 	\input{content/Umsetzung}
 	\input{content/Ergebnis}
 	\input{content/Fazit}
