Klassendiagramm für UUnit

--- a/Studienarbeit/dokumentation.tex
+++ b/Studienarbeit/dokumentation.tex
@@ -63,6 +63,7 @@
 	% Inhalt
 	\input{content/Einleitung}
 	\input{content/Tests_mit_Unity}
+	\input{content/Erstentwurf_des_Frameworks}
 	\input{content/Umsetzung}
 	\input{content/Ergebnis}
 	\input{content/Fazit}
