--- a/Studienarbeit/dokumentation.tex
+++ b/Studienarbeit/dokumentation.tex
@@ -5,7 +5,7 @@
 %% Datum: 06.07.2011
 %%**************************************************************
 
-\newcommand{\pdftitel}{Test Framework für Unity}
+\newcommand{\pdftitel}{Entwicklung eines Test-Frameworks für Unity}
 \newcommand{\autor}{Lennart Hensler}
 \newcommand{\arbeit}{Studienarbeit}
 
@@ -97,5 +97,9 @@
 	
 	% Glossar
 	\printglossary[style=altlist,title=Glossar]
+	
+	\begin{appendices}
+	\input{content/Appendix}
+	\end{appendices}
 \end{document}
 
