--- a/Studienarbeit/header.tex
+++ b/Studienarbeit/header.tex
@@ -144,6 +144,9 @@
 \usepackage[margin=10pt,format=hang,indention=-1.5cm,singlelinecheck=false,font=small,labelfont=bf]{caption}
 \usepackage{subcaption}
 
+% Appendix
+\usepackage{appendix}
+
 % Titel, Autor und Datum
 \title{\titel}
 \author{\autor}
