--- a/Studienarbeit/content/Erstentwurf_des_Frameworks.tex
+++ b/Studienarbeit/content/Erstentwurf_des_Frameworks.tex
@@ -1,5 +1,30 @@
-\chapter{Erstentwurf des Frameworks}
+\chapter{Konzept von JUUT}
 
-\section{Struktur existierender Frameworks}
+In diesem Kapitel wird ein möglicher Erstentwurf für das Test-Framework vorgestellt, der als Grundlage für die konkrete Implementierung dienen soll.
 
-\section{Struktur des eigenen Frameworks}
+Zunächst betrachte ich aber die Struktur des schon existierenden Frameworks UUnit und möchte dessen Implementierung analysieren.
+
+\section{Struktur von UUnit}
+
+In diesem Abschnitt werde ich die Struktur von UUnit - stellvertretend für die existierenden Test-Frameworks für Unity - vorstellend und die Implementierung grob analysieren. Die daraus gewonnenen Erkenntnisse möchte ich für meinen Erstentwurf nutzen.
+
+Auf der nächsten Seite befindet sich ein Klassendiagramm aller Klassen von UUnit und dessen relevanten Methoden. Wie man sieht besteht das Framework aus nur wenigen Klassen, wobei der Großteil der Arbeit von \textit{UUnitTestSuite} und \textit{UUnitTestCase} verrichtet wird.
+
+\textit{UUnitTestCase} ist die Basisklasse aller Testklassen und stellt die Methoden \textit{SetUp} und \textit{TearDown} zur Verfügung, welche vor/nach jedem Aufruf eines Tests ausgeführt werden. \textit{testMethodName} repräsentiert den Namen der Testmethode, welche durch die Methode \textit{Run} gestartet werden soll. Bei der Ausführung eines Tests (s. \autoref{code:UUnitTestCase_Run} \nameref{code:UUnitTestCase_Run}) wird zunächst die \textit{SetUp}-Methode ausgeführt. Anschließend wird die auszuführende Testmethode per Reflection aufgerufen. Falls währenddessen eine Exception auftritt wird diese aufgefangen und deren Nachricht über die Debug-Konsole von Unity ausgegeben. Abschließend wird \textit{TearDown} ausgeführt. Im Zuge dessen wird auch das übergebene \textit{UUnitTestResult}-Objekt aktualisiert, wobei lediglich die Anzahl der ausgeführten und fehlgeschlagenen Tests angepasst werden.
+
+\clearpage
+\begin{figure}
+\centering
+\includegraphics[width=0.9\linewidth]{images/Kapitel_ErstentwurfDesFrameworks/UUnitStruktur}
+\caption[Struktur des Test-Frameworks UUnit]{Struktur des Test-Frameworks UUnit}
+\label{fig:UUnitStruktur}
+\end{figure}
+\clearpage
+
+\textit{UUnitTestSuite} verwaltet eine Menge von Testklassen, die per \textit{Add} und \textit{AddAll} hinzugefügt werden können. Aus dem Quellcode (s. \autoref{code:UUnitTestSuite_AddAll} \nameref{code:UUnitTestSuite_AddAll}) der \textit{AddAll}-Methode geht hervor, dass für jede einzelne Testmethode eine Instanz von \textit{UUnitTestCase} benötigt wird. Wird nun die \textit{Run}-Methode aufgerufen, wird zunächst eine \textit{UUnitTestResult} Instanz erzeugt. Anschließend wird von jedem enthaltenen \textit{UUnitTestCase} die \textit{Run}-Methode aufgerufen, wobei das Ergebnis-Objekt übergeben. Dieses wird abschließend an den Aufrufer zurückgegeben.
+
+Ich halte es für unnötig, dass für jede einzelne Testmethode eine Instanz der Testklasse benötigt wird, sondern denke dass eine Instanz pro Testklasse logischer wäre. Außerdem ist ein leichtes Hinzufügen weiterer Tests nur über die \textit{AddAll}-Methode möglich, da die Methode zum Hinzufügen einer einzelnen Testmethode einen Parameter vom Typ \textit{UUnitTestCase} erwartet. Dadurch muss der Anwender eine Instanz seiner konkreten Testklasse erzeugen und das Attribut \textit{testMethodName} korrekt fülle, um einen einzelnen Test hinzuzufügen. Diesen Umstand halte ich für nicht intuitiv. Des Weiteren denke ich, dass die Ausführung aller für Tests relevanten Methoden in einer separaten Klasse besser aufgehoben wäre und nicht in \textit{UUnitTestCase} gehört. Auch die direkte Ausgabe auf die Konsole, nachdem ein Test fehlgeschlagen ist sollte ausgelagert werden, um die Verantwortlichkeiten von \textit{UUnitTestCase} möglichst gering zu halten.
+
+Diese Kritikpunkte und die geringe Größe von UUnit stützen meine Entscheidung bei der Entwicklung eines Frameworks von vorne zu beginnen.
+
+\section{Erstentwurf für JUUT}
