--- a/Studienarbeit/content/Ergebnis.tex
+++ b/Studienarbeit/content/Ergebnis.tex
@@ -1,1 +1,9 @@
 \chapter{Ergebnis und Ausblick}
+
+\clearpage
+\begin{figure}
+\centering
+\includegraphics[width=0.9\linewidth]{images/Kapitel_Ergebnis/Overview}
+\caption[Klassendiagramm JUUT]{Klassendiagramm JUUT}
+\label{fig:Overview}
+\end{figure}
