--- a/Studienarbeit/header.tex
+++ b/Studienarbeit/header.tex
@@ -60,12 +60,6 @@
 \definecolor{ListingKeyword}{RGB}{57, 135, 214}
 \definecolor{ListingString}{RGB}{214, 136, 82}
 \definecolor{ListingComment}{RGB}{84, 139, 61}
-\definecolor{ScriptClass}{RGB}{192, 0, 192}
-\definecolor{ScriptLogicInterface}{RGB}{0, 128, 128}
-\definecolor{LogicClass}{RGB}{255, 128, 0}
-\definecolor{HealthClass}{RGB}{0, 128, 0}
-\definecolor{MovementClass}{RGB}{0, 0, 128}
-\definecolor{AttackClass}{RGB}{192, 0, 0}
 
 % PDF Einstellungen
 %\usepackage[%
@@ -139,6 +133,9 @@
 
 % Fussnoten
 \usepackage[perpage, hang, multiple, stable]{footmisc}
+
+% Text Bilder umfließen lassen
+\usepackage{wrapfig}
 
 % Captions von Bildern
 \usepackage[margin=10pt,format=hang,indention=-1.5cm,singlelinecheck=false,font=small,labelfont=bf]{caption}
