--- a/Studienarbeit/content/Appendix.tex
+++ b/Studienarbeit/content/Appendix.tex
@@ -43,8 +43,12 @@ public void AddAll (Type testCaseType)
 	}
 }
 \end{lstlisting}
+\clearpage
 
 \section{Implementierung von JUUT}
+
+\subsection{Attributes}
+
 \begin{lstlisting}[caption={[Quellcode der \textit{Validate}-Methode von \textit{SimpleTestMethodAttribute}]Quellcode der \textit{Validate}-Methode von \textit{SimpleTestMethodAttribute}}, label=code:SimpleTestMethodAttribute_Validate]
 protected override bool Validate(MemberInfo member) {
     MethodInfo method = (MethodInfo) member;
@@ -56,5 +60,90 @@ protected override bool Validate(MemberInfo member) {
         return true;
     }
     return false;
+}
+\end{lstlisting}
+
+\subsection{Scanners}
+\label{sec:Appendix_Scanners}
+
+\begin{lstlisting}[caption={[Quellcode der \textit{GetAllTestMethodsOfClass}-Methode von \textit{TestClassScanner}]Quellcode der \textit{GetAllTestMethodsOfClass}-Methode von \textit{TestClassScanner}}, label=code:TestClassScanner_GetAllTests]
+public static List<MethodInfo> GetAllTestMethodsOfClass(Type testClass) {
+    return GetTestMethodsOfTestClass(typeof(TestAfterAttribute), testClass);
+}
+\end{lstlisting}
+
+\begin{lstlisting}[caption={[Quellcode der \textit{GetTestMethodsOfClass}-Methode von \textit{TestClassScanner}]Quellcode der \textit{GetTestMethodsOfClass}-Methode von \textit{TestClassScanner}}, label=code:TestClassScanner_GetTests]
+private static List<MethodInfo> GetTestMethodsOfClass(Type testMethodAttribute, Type testClass) {
+    JUUTAttribute.IsMemberValidFor(typeof(JUUTTestClassAttribute), testClass);
+
+    List<MethodInfo> testMethods = new List<MethodInfo>();
+    foreach (MethodInfo method in testClass.GetMethods()) {
+        if (JUUTAttribute.IsMemberValidFor(testMethodAttribute, method)) {
+            testMethods.Add(method);
+        }
+    }
+    return testMethods;
+}
+\end{lstlisting}
+
+\subsection{Runners}
+\label{sec:Appendix_Runners}
+
+\begin{lstlisting}[caption={[Quellcode der \textit{Run}-Methode von \textit{SimpleTestRunner}]Quellcode der \textit{Run}-Methode von \textit{SimpleTestRunner}}, label=code:SimpleTestRunner_Run]
+public ClassReport Run(TestClassSession session) {
+    Type testClass = session.TestClass;
+    ClassReport report = new SimpleClassReport(testClass);
+
+    MethodReport methodReport = RunClassSetUp(testClass);
+    if (methodReport != null) {
+        report.Add(methodReport);
+        return report;
+    }
+
+    object testInstance = Activator.CreateInstance(testClass);
+    foreach (MethodInfo test in session.TestsToRun) {
+        methodReport = RunTestSetUp(testInstance, testClass);
+        if (methodReport != null) {
+            report.Add(methodReport);
+            return report;
+        }
+
+        report.Add(RunTest(testInstance, test));
+
+        methodReport = RunTestTearDown(testInstance, testClass);
+        if (methodReport != null) {
+            report.Add(methodReport);
+            return report;
+        }
+    }
+
+    methodReport = RunClassTearDown(testClass);
+    if (methodReport != null) {
+        report.Add(methodReport);
+    }
+    return report;
+}
+\end{lstlisting}
+
+\begin{lstlisting}[caption={[Quellcode der \textit{RunTest}-Methode von \textit{SimpleTestRunner}]Quellcode der \textit{RunTest}-Methode von \textit{SimpleTestRunner}}, label=code:SimpleTestRunner_RunTest]
+private static MethodReport RunTest(object instance, MethodInfo testMethod) {
+    return RunInstanceMethod(instance, testMethod, true);
+}
+\end{lstlisting}
+
+\begin{lstlisting}[caption={[Quellcode der \textit{RunInstanceMethod}-Methode von \textit{SimpleTestRunner}]Quellcode der \textit{\textbf{RunTest}}-Methode von \textit{SimpleTestRunner}}, label=code:SimpleTestRunner_RunInstanceMethod]
+private static MethodReport RunInstanceMethod(object testInstance, MethodInfo method, bool allwaysReport) {
+    try {
+        method.Invoke(testInstance, null);
+        if (allwaysReport) {
+            return new MethodReport(method);
+        }
+        return null;
+    } catch (Exception raisedException) {
+        if (raisedException is TargetInvocationException) {
+            raisedException = raisedException.InnerException;
+        }
+        return new MethodReport(method, raisedException);
+    }
 }
 \end{lstlisting}
