--- a/Studienarbeit/content/Einleitung.tex
+++ b/Studienarbeit/content/Einleitung.tex
@@ -148,11 +148,11 @@ Eine weitere wichtige Methode ist \textit{OnGUI()}, in der Dinge implementiert w
 \item Alle \textit{Awake}-Methoden
 \item Alle \textit{Start}-Methoden
 \item while (Schrittweite variabel zur Renderzeit des vorangegangene Bildes)
-	\begin{enumerate}
-	\item[3.1] Alle \textit{FixedUpdate}-Methoden
-	\item[3.2] Physik-Simulation
-	\item[3.3] Ausgelöste \textit{OnTriggetEnter/Exit/Stay}-Methoden
-	\item[3.4] Ausgelöste \textit{OnCollisionEnter/Exit/Stay}-Methoden
+	\begin{enumerate}[label*=\arabic*.]
+	\item Alle \textit{FixedUpdate}-Methoden
+	\item Physik-Simulation
+	\item Ausgelöste \textit{OnTriggetEnter/Exit/Stay}-Methoden
+	\item Ausgelöste \textit{OnCollisionEnter/Exit/Stay}-Methoden
 	\end{enumerate}
 \item Transformation und Rotation der Models
 \item Ausgelöste \textit{OnMouseDown/OnMouseUp}-Methoden
