--- a/Studienarbeit/header.tex
+++ b/Studienarbeit/header.tex
@@ -144,6 +144,9 @@
 % Appendix
 \usepackage{appendix}
 
+% geschachtelte Aufzählungen
+\usepackage{enumitem}
+
 % Titel, Autor und Datum
 \title{\titel}
 \author{\autor}
